--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
-          <a href="index.html" class="nav__logo">Marcus</a>
+          <a href="index.html" class="nav__logo">Portfolio</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -52,7 +52,7 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Hi, <br />I'm <span class="home__title-color">Marcus</span><br />
+            Hi, <br />I'm <span class="home__title-color">Fresher</span><br />
             Web Developer
           </h1>
           <a href="assets/Nguyen_Linh_Tien_CV.pdf" download class="button">
